--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,5 +94,12 @@ dependencies {
     //bottom namvigation
     implementation 'com.github.simformsolutions:SSCustomBottomNavigation:1.0'
 
+    //Firebase
+    implementation platform('com.google.firebase:firebase-bom:26.3.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-messaging-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    
+
 
 }
