--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,7 +100,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-messaging-ktx'
     implementation 'com.google.firebase:firebase-analytics-ktx'
-    
+
+    implementation 'org.conscrypt:conscrypt-android:2.2.1'
 
 
 }
