02/03/2021 i have done Dashboard Data binding.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Diva">
-        <activity android:name=".dashboard.ui.HomeActivity"></activity>
+        <activity android:name=".dashboard.ui.HomeActivity"/>
         <activity android:name=".auth.ui.AboutYouActivity" />
         <activity android:name=".auth.ui.OtpActivity" />
         <activity android:name=".auth.ui.LoginActivity" />
+        <activity android:name=".auth.ui.MyProfileActivity"/>
         <activity android:name=".auth.ui.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
