--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,7 +101,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging-ktx'
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
-    implementation 'org.conscrypt:conscrypt-android:2.2.1'
+    implementation 'com.github.zhpanvip:viewpagerindicator:1.2.0'
+    implementation 'com.dinuscxj:circleprogressbar:1.3.6'
+
+    implementation 'com.etebarian:meow-bottom-navigation:1.3.1'
 
 
 }
