--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,5 +106,8 @@ dependencies {
 
     implementation 'com.etebarian:meow-bottom-navigation:1.3.1'
 
+    //image cropper
+    implementation 'com.github.yalantis:ucrop:2.2.3-native'
+
 
 }
