--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".auth.ui.OtpActivity" />
         <activity android:name=".auth.ui.LoginActivity" />
         <activity android:name=".auth.ui.MyProfileActivity"/>
+        <activity android:name=".auth.ui.EditProfileActivity"/>
         <activity android:name=".auth.ui.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,6 +30,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.yalantis.ucrop.UCropActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Diva" />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
+
+        <activity android:name=".auth.ui.PaymentHistoryActivity"/>
+        <activity android:name=".dashboard.ui.NotificationActivity"/>
+
+
     </application>
 
 </manifest>
