--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,5 +109,7 @@ dependencies {
     //image cropper
     implementation 'com.github.yalantis:ucrop:2.2.3-native'
 
+    implementation 'com.michalsvec:single-row-calednar:1.0.0'
+
 
 }
