--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
 
         <activity android:name=".auth.ui.PaymentHistoryActivity"/>
         <activity android:name=".dashboard.ui.NotificationActivity"/>
+        <activity android:name=".dashboard.ui.DietWeekDaysActivity"/>
 
 
     </application>
