--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,8 @@
         <activity android:name=".auth.ui.PaymentHistoryActivity"/>
         <activity android:name=".dashboard.ui.NotificationActivity"/>
         <activity android:name=".dashboard.ui.DietWeekDaysActivity"/>
+        <activity android:name=".dashboard.ui.MealTypesActivity"/>
+        <activity android:name=".dashboard.ui.DietPlanActivity"/>
 
 
     </application>
