--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,6 +107,8 @@ dependencies {
     implementation 'com.dinuscxj:circleprogressbar:1.3.6'
 
     implementation 'com.etebarian:meow-bottom-navigation:1.3.1'
+    implementation 'com.github.prolificinteractive:material-calendarview:2.0.0'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 
     //image cropper
     implementation 'com.github.yalantis:ucrop:2.2.3-native'
