--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
         <activity android:name=".dashboard.ui.CustomerSupportActivity"/>
         <activity android:name=".dashboard.ui.AboutUsActivity"/>
         <activity android:name=".dashboard.ui.TrainerDetailActivity"/>
+        <activity android:name=".dashboard.ui.SelectSlotsActivity"/>
 
     </application>
 
