15/03/2021 handle booking slots

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         <activity android:name=".dashboard.ui.AboutUsActivity"/>
         <activity android:name=".dashboard.ui.TrainerDetailActivity"/>
         <activity android:name=".dashboard.ui.SelectSlotsActivity"/>
+        <activity android:name=".dashboard.ui.BookingSummaryActivity"/>
 
     </application>
 
