--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,8 @@
         <activity android:name=".dashboard.ui.SelectSlotsActivity"/>
         <activity android:name=".dashboard.ui.BookingSummaryActivity"/>
         <activity android:name=".dashboard.ui.BookingSuccessfullyActivity"/>
+        <activity android:name=".dashboard.ui.BuyMemberShipActivity"/>
+
 
     </application>
 
