--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,9 @@
         <activity android:name=".dashboard.ui.SelectSlotsActivity"/>
         <activity android:name=".dashboard.ui.BookingSummaryActivity"/>
         <activity android:name=".dashboard.ui.BookingSuccessfullyActivity"/>
-        <activity android:name=".dashboard.ui.BuyMemberShipActivity"/>
+        <activity android:name=".dashboard.fitnessCenters.CenterActivity"/>
+        <activity android:name=".dashboard.fitnessCenters.CenterDetailBookingActivity"/>
+
 
 
     </application>
