--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,10 +58,12 @@
         <activity android:name=".dashboard.ui.SelectSlotsActivity"/>
         <activity android:name=".dashboard.ui.TrainerBookingSummaryActivity"/>
         <activity android:name=".dashboard.ui.BookingSuccessfullyActivity"/>
-        <activity android:name=".dashboard.fitnessCenters.CenterActivity"/>
-        <activity android:name=".dashboard.fitnessCenters.CenterDetailBookingActivity"/>
-        <activity android:name=".dashboard.fitnessCenters.FitnessCenterSummaryActivity"/>
+        <activity android:name=".dashboard.bookingFitnessCenters.CenterActivity"/>
+        <activity android:name=".dashboard.bookingFitnessCenters.CenterDetailBookingActivity"/>
+        <activity android:name=".dashboard.bookingFitnessCenters.FitnessCenterSummaryActivity"/>
         <activity android:name=".dashboard.upComingCompletedBookingDetails.CenterBookingDetailsActivity"/>
+        <activity android:name=".dashboard.bookingTrainerWithCenter.TrainerListActivity"/>
+        <activity android:name=".dashboard.bookingTrainerWithCenter.BookTrainerCenterDetailActivity"/>
 
 
     </application>
