--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,8 @@
         <activity android:name=".dashboard.bookTrainerWithCenter.TrainerCenterSlotsActivity"/>
         <activity android:name=".dashboard.bookTrainerWithCenter.BookingSummaryTrainerCenterActivity"/>
         <activity android:name=".dashboard.payment.PaymentHistoryActivity"/>
+        <activity android:name=".dashboard.homeWorkout.CreateWorkoutPlanActivity"/>
+        <activity android:name=".dashboard.homeWorkout.WorkoutDayActivity"/>
 
         <activity
             android:name="com.oppwa.mobile.connect.checkout.dialog.CheckoutActivity"
