--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
-
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 30
@@ -94,7 +94,7 @@ dependencies {
 
     //bottom namvigation
     implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7.6'
-
+    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
 
 
     //Firebase
@@ -113,7 +113,6 @@ dependencies {
     //image cropper
     implementation 'com.github.yalantis:ucrop:2.2.3-native'
 
-    implementation 'com.michalsvec:single-row-calednar:1.0.0'
 
     //hyperpay
     implementation 'androidx.browser:browser:1.3.0'
