--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,4 +120,7 @@ dependencies {
     implementation 'io.card:android-sdk:5.5.1'
     implementation project(':oppwa.mobile-2.46.0')
 
+    implementation 'io.github.ShawnLin013:number-picker:2.4.13'
+
+
 }
