--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,13 +113,13 @@ dependencies {
     //image cropper
     implementation 'com.github.yalantis:ucrop:2.2.3-native'
 
-
+    implementation 'com.airbnb.android:lottie:3.4.0'
     //hyperpay
     implementation 'androidx.browser:browser:1.3.0'
     implementation 'com.google.android.gms:play-services-wallet:18.1.2'
     implementation 'io.card:android-sdk:5.5.1'
     implementation project(':oppwa.mobile-2.46.0')
-
+    implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
     implementation 'io.github.ShawnLin013:number-picker:2.4.13'
 
 
