--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,6 +79,8 @@
         <activity android:name=".dashboard.ui.ReviewRatingActivity"/>
         <activity android:name=".dashboard.manageSession.ManageSessionActivity"/>
         <activity android:name=".dashboard.manageSession.ScheduleSessionActivity"/>
+        <activity android:name=".dashboard.ui.MySubscriptionActivity"/>
+
 
         <activity
             android:name="com.oppwa.mobile.connect.checkout.dialog.CheckoutActivity"
@@ -87,6 +89,7 @@
             android:theme="@style/Theme.Checkout.Dark"
             android:windowSoftInputMode="adjustPan"
             tools:replace="android:windowSoftInputMode,theme" />
+
 
         <activity android:name=".dashboard.ui.BookingSuccessfullyActivity"
             android:screenOrientation="fullSensor">
